--- a/noonno/html/products/products_map.html
+++ b/noonno/html/products/products_map.html
@@ -160,32 +160,32 @@
                 <div class="map-cont-cont">
                   <ul class="graph">
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2" data-startpos="0" data-overpos="">
+                      <div class="gr-width gr-w-col2 type0 type1" data-startpos="0" data-overwidth="0" >
                         <button class="color-yellow">눈높이한글똑똑</button>
                       </div>
                     </li> 
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col4" data-startpos="1">
+                      <div class="gr-width gr-w-col4 type1 type2 type3 type4" data-startpos="1" data-overwidth="0" >
                         <button class="color-green">눈높이국어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col1-over-1_5" data-startpos="2">
+                      <div class="gr-width gr-w-col1-over-1_5 type2 type3 type4" data-startpos="2" data-overwidth="6">
                         <button class="color-green">눈높이영역국어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2" data-startpos="3">
+                      <div class="gr-width gr-w-col2 type2 type3" data-startpos="2" data-overwidth="0">
                         <button class="color-green">눈높이스쿨국어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col4" data-startpos="0">
+                      <div class="gr-width gr-w-col4 type1 type2 type3 type4" data-startpos="1" data-overwidth="0">
                         <button class="color-green">눈높이창의독서</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col1-over-1_1" data-startpos="1">
+                      <div class="gr-width gr-w-col1-over-1_1 type2 type3" data-startpos="2" data-overwidth="2">
                         <button class="color-green">써밋스코어국어</button>
                       </div>
                     </li>
@@ -203,7 +203,7 @@
                   </div>
                 </div>
               </div>
-              <div class="map-cont map-cont02 language">
+              <div class="map-cont map-cont02 math">
                 <div class="map-cont-tit-box">
                   <img src="../../resource/img/mapicon02.png" alt="">
                   <span>수리영역</span>
@@ -211,37 +211,37 @@
                 <div class="map-cont-cont">
                   <ul class="graph">
                     <li class="gr-line">
-                      <div class="gr-width gr-w-normal" data-startpos="0">
+                      <div class="gr-width gr-w-normal type0" data-startpos="0">
                         <button class="color-yellow">눈높이놀이똑똑</button>
                       </div>
                     </li> 
                     <li class="gr-line">
-                      <div class="gr-width gr-w-normal" data-startpos="1">
+                      <div class="gr-width gr-w-normal type1" data-startpos="1">
                         <button class="color-yellow">눈높이수학똑똑</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5" data-startpos="1">
+                      <div class="gr-width gr-w-col5 type1 type2 type3 type4 type5" data-startpos="1">
                         <button class="color-red">눈높이수학</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col4" data-startpos="1">
+                      <div class="gr-width gr-w-col4 type1 type2 type3 type4" data-startpos="1">
                         <button class="color-red">눈높이사고력수학</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2" data-startpos="2">
+                      <div class="gr-width gr-w-col2 type2 type3" data-startpos="2">
                         <button class="color-red">눈높이스쿨수학</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2" data-startpos="2">
+                      <div class="gr-width gr-w-col2 type2 type3" data-startpos="2">
                         <button class="color-red">써밋스피드수학</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col4" data-startpos="2">
+                      <div class="gr-width gr-w-col4 type2 type3 type4 type5" data-startpos="2">
                         <button class="color-red">써밋스코어수학</button>
                       </div>
                     </li>
@@ -259,7 +259,7 @@
                   </div>
                 </div>
               </div>
-              <div class="map-cont map-cont03 language">
+              <div class="map-cont map-cont03 Foreign">
                 <div class="map-cont-tit-box">
                   <img src="../../resource/img/mapicon03.png" alt="">
                   <span>외국어영역</span>
@@ -340,7 +340,7 @@
                   </div>
                 </div>
               </div>
-              <div class="map-cont map-cont04 language">
+              <div class="map-cont map-cont04 science">
                 <div class="map-cont-tit-box">
                   <img src="../../resource/img/mapicon04.png" alt="">
                   <span>과학영역</span>
@@ -366,7 +366,7 @@
                   </div>
                 </div>
               </div>
-              <div class="map-cont map-cont05 language">
+              <div class="map-cont map-cont05 social">
                 <div class="map-cont-tit-box">
                   <img src="../../resource/img/mapicon05.png" alt="">
                   <span>사회영역</span>
@@ -402,7 +402,7 @@
                   </div>
                 </div>
               </div>
-              <div class="map-cont map-cont06 language">
+              <div class="map-cont map-cont06 integrated">
                 <div class="map-cont-tit-box">
                   <img src="../../resource/img/mapicon06.png" alt="">
                   <span>통합영역</span>
@@ -438,7 +438,7 @@
                   </div>
                 </div>
               </div>
-              <div class="map-cont map-cont07 language">
+              <div class="map-cont map-cont07 smart">
                 <div class="map-cont-tit-box">
                   <img src="../../resource/img/mapicon07.png" alt="">
                   <span>스마트학습영역</span>
@@ -451,12 +451,12 @@
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col4" data-startpos="1">
+                      <div class="gr-width gr-w-col4" data-startpos="1" data-overwidth="7">
                         <button class="color-red">써밋스코어수학</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col1-over-1_1" data-startpos="2">
+                      <div class="gr-width gr-w-col1-over-1_1" data-startpos="2" data-overwidth="3">
                         <button class="color-green">써밋스코어국어</button>
                       </div>
                     </li>
@@ -483,6 +483,88 @@
           </div>
         </div>
       </div>
+      <!-- <div class="map-view-wrap">
+        <div class="map-view-align">
+          <div class="map-view-cont">
+            <div class="prd-img">
+              <img src="../../resource/img/Rectangle125.png" alt="">
+            </div>
+            <div class="view-prd">
+              <div class="prd-title">
+                <img src="../../resource/img/products_detail/math.png" alt="제품로고">
+                <p class="subinfo">연산력 완성으로 수학 자신감이 무럭무럭!</p>
+                <p class="hashtag"><span>#눈높이수학</span><span>#수학공부</span></p>
+              </div>
+              <div class="prd-option">
+                <ul>
+                  <li class="option-tit">학습연령</li>
+                  <li class="option-txt">
+                    <p class="age">유아, 초등학생1~6, 중학생1~3, 고등학생1~3</p>
+                  </li>
+                </ul>
+                <ul>
+                  <li class="option-tit">학습과목</li>
+                  <li class="option-txt">
+                    <p class="subject">수리영역</p>
+                  </li>
+                </ul>
+                <ul>
+                  <li class="option-tit">학습유형</li>
+                  <li class="option-txt">
+                    <div>
+                      <p class="type">방문학습</p>
+                      <div class="tooltip">
+                        <img src="../../resource/img/prd/prd-tip.png" alt="방문학습 도움말" class="prd-tooltip">
+                        <div class="tooltip-info" style="left: -113px;">
+                          <div>
+                            <p class="tooltip-tit">선생님과 집에서</p>
+                            <p class="tooltip-txt">전문화된 눈높이선생님이 집으로 방문하여 1:1 맞춤관리를 받는 학습시스템</p>
+                            <div class="tooltip-line"></div>
+                            <a href="" alt="방문학습 안내 자세히보기">자세히보기<img src="../../resource/img/prd/tooltipmore.png" alt=""></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div>
+                      <p class="type">전화/화상</p>
+                      <div class="tooltip">
+                        <img src="../../resource/img/prd/prd-tip.png" alt="전화/화상 도움말" class="prd-tooltip">
+                        <div class="tooltip-info" style="left: -113px;">
+                          <div>
+                            <p class="tooltip-tit">선생님과 집에서</p>
+                            <p class="tooltip-txt">전문화된 눈높이선생님이 집으로 방문하여 1:1 맞춤관리를 받는 학습시스템</p>
+                            <div class="tooltip-line"></div>
+                            <a href="" alt="전화/화상 안내 자세히보기">자세히보기<img src="../../resource/img/prd/tooltipmore.png" alt=""></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div>
+                      <p class="type">학원/센터</p>
+                      <div class="tooltip">
+                        <img src="../../resource/img/prd/prd-tip.png" alt="학원/센터 도움말" class="prd-tooltip">
+                        <div class="tooltip-info" style="left: -113px;">
+                          <div>
+                            <p class="tooltip-tit">선생님과 집에서</p>
+                            <p class="tooltip-txt">전문화된 눈높이선생님이 집으로 방문하여 1:1 맞춤관리를 받는 학습시스템</p>
+                            <div class="tooltip-line"></div>
+                            <a href="" alt="학원/센터 안내 자세히보기">자세히보기<img src="../../resource/img/prd/tooltipmore.png" alt=""></a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="prd-top-link btn_wrap">
+                <a href="" class="prd-more-btn">자세히보기</a>
+                <a href="" class="prdview_btn">상담신청</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="map-view-bg"></div>
+      </div> -->
     </div>
     
     <div class="footer">
