한눈에보기 팝업

--- a/noonno/html/products/products_detail.html
+++ b/noonno/html/products/products_detail.html
@@ -181,7 +181,7 @@
                 <ul>
                   <li class="option-tit">학습유형</li>
                   <li class="option-txt">
-                    <div>
+                    <div class="tooltip-wrap">
                       <p class="type">방문학습</p>
                       <div class="tooltip">
                         <img src="../../resource/img/prd/prd-tip.png" alt="방문학습 도움말" class="prd-tooltip">
@@ -195,7 +195,7 @@
                         </div>
                       </div>
                     </div>
-                    <div>
+                    <div  class="tooltip-wrap">
                       <p class="type">전화/화상</p>
                       <div class="tooltip">
                         <img src="../../resource/img/prd/prd-tip.png" alt="전화/화상 도움말" class="prd-tooltip">
@@ -209,7 +209,7 @@
                         </div>
                       </div>
                     </div>
-                    <div>
+                    <div  class="tooltip-wrap">
                       <p class="type">학원/센터</p>
                       <div class="tooltip">
                         <img src="../../resource/img/prd/prd-tip.png" alt="학원/센터 도움말" class="prd-tooltip">
@@ -296,7 +296,13 @@
                     <a href="https://www.youtube.com/watch?v=OW5Is0f1Ehs" target="_blank"><img src="../../resource/img/video_play_btn.png" alt=""></a>
                   </div>
                 </div>
-                <div class="dt-section dt-section03 related-prd">
+                <div class="dt-section dt-section03 sub-prd">
+                  <h3 class="dt-info-tit">부교재</h3>
+                  <div class="sub-prd-imf">
+                    <img src="../../resource/img/products_detail/Rectangle_141.jpg" alt="">
+                  </div>
+                </div>
+                <div class="dt-section dt-section04 related-prd">
                   <h3 class="dt-info-tit">함께하면 좋은 제품</h3>
                   <div class="related-lst">
                     <ul>
@@ -331,7 +337,7 @@
                     </ul>
                   </div>
                 </div>
-                <div class="dt-section dt-section04 banner">
+                <div class="dt-section dt-section05 banner">
                   <div class="banner-w1180">
                     <img src="../../resource/img/products_detail/Rectangle102.jpg" alt="">
                     <div class="banner-event-info">
