--- a/noonno/html/products/products_map.html
+++ b/noonno/html/products/products_map.html
@@ -483,7 +483,7 @@
           </div>
         </div>
       </div>
-      <!-- <div class="map-view-wrap">
+      <div class="map-view-wrap">
         <div class="map-view-align">
           <div class="map-view-cont">
             <div class="prd-img">
@@ -492,8 +492,7 @@
             <div class="view-prd">
               <div class="prd-title">
                 <img src="../../resource/img/products_detail/math.png" alt="제품로고">
-                <p class="subinfo">연산력 완성으로 수학 자신감이 무럭무럭!</p>
-                <p class="hashtag"><span>#눈높이수학</span><span>#수학공부</span></p>
+                <p class="subinfo">학교 내신대비 <span>자기주도 학습</span>으로 수학 성적이 쑥쑥!</p>
               </div>
               <div class="prd-option">
                 <ul>
@@ -511,7 +510,7 @@
                 <ul>
                   <li class="option-tit">학습유형</li>
                   <li class="option-txt">
-                    <div>
+                    <div class="tooltip-wrap">
                       <p class="type">방문학습</p>
                       <div class="tooltip">
                         <img src="../../resource/img/prd/prd-tip.png" alt="방문학습 도움말" class="prd-tooltip">
@@ -525,7 +524,7 @@
                         </div>
                       </div>
                     </div>
-                    <div>
+                    <div class="tooltip-wrap">
                       <p class="type">전화/화상</p>
                       <div class="tooltip">
                         <img src="../../resource/img/prd/prd-tip.png" alt="전화/화상 도움말" class="prd-tooltip">
@@ -539,7 +538,7 @@
                         </div>
                       </div>
                     </div>
-                    <div>
+                    <div class="tooltip-wrap">
                       <p class="type">학원/센터</p>
                       <div class="tooltip">
                         <img src="../../resource/img/prd/prd-tip.png" alt="학원/센터 도움말" class="prd-tooltip">
@@ -558,13 +557,13 @@
               </div>
               <div class="prd-top-link btn_wrap">
                 <a href="" class="prd-more-btn">자세히보기</a>
-                <a href="" class="prdview_btn">상담신청</a>
               </div>
+              <div class="close"><button><img src="../../resource/img/prd-view-close.png" alt=""></button></div>
             </div>
           </div>
         </div>
         <div class="map-view-bg"></div>
-      </div> -->
+      </div>
     </div>
     
     <div class="footer">
