--- a/noonno/work_list_ko.html
+++ b/noonno/work_list_ko.html
@@ -238,11 +238,11 @@
   </colgroup>
   <tbody>
   <tr class="ok">
-    <td rowspan="2">제품소개</td>
+    <td rowspan="3">제품소개</td>
     <td rowspan="">제품리스트</td>
     <td></td>
     <td></td>
-    <td rowspan="2">products</td>
+    <td rowspan="3">products</td>
     <td><a href="html/products/products_list.html" target="_blank">products_list</a></td>
     <td class=""></td>
   </tr>
@@ -253,6 +253,15 @@
     <td></td>
 
     <td><a href="html/products/products_detail.html" target="_blank">products_detail</a></td>
+    <td class=""></td>
+  </tr>
+  <tr class="ok">
+
+    <td rowspan="">제품 한눈에보기</td>
+    <td></td>
+    <td></td>
+
+    <td><a href="html/products/products_map.html" target="_blank">products_map</a></td>
     <td class=""></td>
   </tr>
 
