--- a/noonno/html/products/products_map.html
+++ b/noonno/html/products/products_map.html
@@ -140,13 +140,13 @@
                 <div class="mp-table-tit-right">
                   <p class="tit-age"><span>학습연령</span></p>
                   <ul id="age-select-sort">
-                    <li class="type1"><button>영유아</button></li>
-                    <li class="type2"><button>유아</button></li>
-                    <li class="type3"><button>초등1-3</button></li>
-                    <li class="type4"><button>초등4-6</button></li>
-                    <li class="type5"><button>중등</button></li>
-                    <li class="type6"><button>고등</button></li>
-                    <li class="type7"><button>성인</button></li>
+                    <li class="ho-event type1"><button>영유아</button></li>
+                    <li class="ho-event type2"><button>유아</button></li>
+                    <li class="ho-event type3"><button>초등1-3</button></li>
+                    <li class="ho-event type4"><button>초등4-6</button></li>
+                    <li class="ho-event type5"><button>중등</button></li>
+                    <li class="ho-event type6"><button>고등</button></li>
+                    <li class="ho-event type7"><button>성인</button></li>
                   </ul>
                 </div>
               </div>
@@ -154,8 +154,10 @@
             <div id="map-content-wrap">
               <div class="map-cont map-cont01 language">
                 <div class="map-cont-tit-box">
-                  <img src="../../resource/img/mapicon01.png" alt="">
-                  <span>언어영역</span>
+                  <div>
+                    <span class="icon"></span>
+                    <span class="tit">언어영역</span>
+                  </div>
                 </div>
                 <div class="map-cont-cont">
                   <ul class="graph">
@@ -205,8 +207,10 @@
               </div>
               <div class="map-cont map-cont02 math">
                 <div class="map-cont-tit-box">
-                  <img src="../../resource/img/mapicon02.png" alt="">
-                  <span>수리영역</span>
+                  <div>
+                    <span class="icon"></span>
+                    <span class="tit">수리영역</span>
+                  </div>
                 </div>
                 <div class="map-cont-cont">
                   <ul class="graph">
@@ -261,68 +265,70 @@
               </div>
               <div class="map-cont map-cont03 Foreign">
                 <div class="map-cont-tit-box">
-                  <img src="../../resource/img/mapicon03.png" alt="">
-                  <span>외국어영역</span>
+                  <div>
+                    <span class="icon"></span>
+                    <span class="tit">외국어영역</span>
+                  </div>
                 </div>
                 <div class="map-cont-cont">
                   <ul class="graph">
                     <li class="gr-line">
-                      <div class="gr-width gr-w-normal"  data-startpos="1">
+                      <div class="gr-width gr-w-normal type1"  data-startpos="1">
                         <button class="color-yellow">눈높이영어똑똑</button>
                       </div>
                     </li> 
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5" data-startpos="2">
+                      <div class="gr-width gr-w-col5 type2 type3 type4 type5 type6" data-startpos="2">
                         <button class="color-blue">눈높이영어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5" data-startpos="2">
+                      <div class="gr-width gr-w-col5 type2 type3 type4 type5 type6" data-startpos="2">
                         <button class="color-blue">I Listening</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5" data-startpos="2">
+                      <div class="gr-width gr-w-col5 type2 type3 type4 type5 type6" data-startpos="2">
                         <button class="color-blue">I Grammer</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5" data-startpos="2">
+                      <div class="gr-width gr-w-col5 type2 type3 type4 type5 type6" data-startpos="2">
                         <button class="color-blue">Happy Talk</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5" data-startpos="2">
+                      <div class="gr-width gr-w-col5 type2 type3 type4 type5 type6" data-startpos="2">
                         <button class="color-blue">눈높이일본어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5" data-startpos="2">
+                      <div class="gr-width gr-w-col5 type2 type3 type4 type5 type6" data-startpos="2">
                         <button class="color-blue">대교 전화영어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5" data-startpos="2">
+                      <div class="gr-width gr-w-col5 type2 type3 type4 type5 type6" data-startpos="2">
                         <button class="color-blue">대교 전화일본어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5" data-startpos="2">
+                      <div class="gr-width gr-w-col5 type2 type3 type4 type5 type6" data-startpos="2">
                         <button class="color-blue">대교 화상영어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col6" data-startpos="1">
+                      <div class="gr-width gr-w-col6 type1 type2 type3 type4 type5 type6" data-startpos="1">
                         <button class="color-blue">톡앤큐화상영어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5" data-startpos="2">
+                      <div class="gr-width gr-w-col5 type2 type3 type4 type5 type6" data-startpos="2">
                         <button class="color-blue">데일리잉글리시</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2" data-startpos="2">
+                      <div class="gr-width gr-w-col2 type2 type3" data-startpos="2">
                         <button class="color-blue">써밋스피킹</button>
                       </div>
                     </li>
@@ -342,13 +348,15 @@
               </div>
               <div class="map-cont map-cont04 science">
                 <div class="map-cont-tit-box">
-                  <img src="../../resource/img/mapicon04.png" alt="">
-                  <span>과학영역</span>
+                  <div>
+                    <span class="icon"></span>
+                    <span class="tit">과학영역</span>
+                  </div>
                 </div>
                 <div class="map-cont-cont">
                   <ul class="graph">
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col3"  data-startpos="2">
+                      <div class="gr-width gr-w-col3 type2 type3 type4"  data-startpos="2">
                         <button class="color-red">눈높이과학플러스온</button>
                       </div>
                     </li> 
@@ -368,23 +376,25 @@
               </div>
               <div class="map-cont map-cont05 social">
                 <div class="map-cont-tit-box">
-                  <img src="../../resource/img/mapicon05.png" alt="">
-                  <span>사회영역</span>
+                 <div>
+                    <span class="icon"></span>
+                    <span class="tit">사회영역</span>
+                 </div>
                 </div>
                 <div class="map-cont-cont">
                   <ul class="graph">
                     <li class="gr-line">
-                      <div class="gr-width gr-w-normal"  data-startpos="4">
+                      <div class="gr-width gr-w-normal type5"  data-startpos="4">
                         <button class="color-green">눈높이중등사회·역사</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2"  data-startpos="2">
+                      <div class="gr-width gr-w-col2 type2 type3"  data-startpos="2">
                         <button class="color-green">눈높이한국사</button>
                       </div>
                     </li> 
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2"  data-startpos="2">
+                      <div class="gr-width gr-w-col2 type2 type3"  data-startpos="2">
                         <button class="color-green">눈높이사회플러스온</button>
                       </div>
                     </li>
@@ -404,23 +414,25 @@
               </div>
               <div class="map-cont map-cont06 integrated">
                 <div class="map-cont-tit-box">
-                  <img src="../../resource/img/mapicon06.png" alt="">
-                  <span>통합영역</span>
+                  <div>
+                    <span class="icon"></span>
+                    <span class="tit">통합영역</span>
+                  </div>
                 </div>
                 <div class="map-cont-cont">
                   <ul class="graph">
                     <li class="gr-line">
-                      <div class="gr-width gr-w-normal" data-startpos="1">
+                      <div class="gr-width gr-w-normal type1" data-startpos="1">
                         <button class="color-yellow">눈높이한자똑똑</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col6" data-startpos="1">
+                      <div class="gr-width gr-w-col6 type1 type2 type3 type4 type5 type6" data-startpos="1">
                         <button class="color-green">눈높이한자</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col5" data-startpos="0">
+                      <div class="gr-width gr-w-col5 type0 type1 type2 type3 type4" data-startpos="0">
                         <button class="color-red">눈높이아티맘</button>
                       </div>
                     </li>
@@ -440,28 +452,30 @@
               </div>
               <div class="map-cont map-cont07 smart">
                 <div class="map-cont-tit-box">
-                  <img src="../../resource/img/mapicon07.png" alt="">
-                  <span>스마트학습영역</span>
+                  <div>
+                    <span class="icon"></span>
+                    <span class="tit">스마트학습영역</span>
+                  </div>
                 </div>
                 <div class="map-cont-cont">
                   <ul class="graph">
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2" data-startpos="2">
+                      <div class="gr-width gr-w-col2 type2 type3" data-startpos="2">
                         <button class="color-red">써밋스피드수학</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col4" data-startpos="1" data-overwidth="7">
+                      <div class="gr-width gr-w-col4 type1 type2 type3 type4 type5" data-startpos="1" data-overwidth="7">
                         <button class="color-red">써밋스코어수학</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col1-over-1_1" data-startpos="2" data-overwidth="3">
+                      <div class="gr-width gr-w-col1-over-1_1 type2 type3" data-startpos="2" data-overwidth="3">
                         <button class="color-green">써밋스코어국어</button>
                       </div>
                     </li>
                     <li class="gr-line">
-                      <div class="gr-width gr-w-col2" data-startpos="2">
+                      <div class="gr-width gr-w-col2 type2 type3" data-startpos="2">
                         <button class="color-blue">써밋스피킹</button>
                       </div>
                     </li>
